# OliLang

./: .gitignore  CHANGELOG.md  OliLang.cabal  README.md
app/: Main.hs  Parse.hs
src/: LICENSE  Tokenize.hs  example.ol  main.hs  src.cabal
src/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
